--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,266 @@
+/* 
+===================
+Fonts (Pacifico, Open Sans) 
+===================
+*/
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Original+Surfer&display=swap");
+
+/* 
+===================
+Fonts (Pacifico, Open Sans) 
+===================
+*/
+:root {
+    /*  HAWAIIAN FONT PAIRING */
+    --ff-heading: "Original Surfer", cursive;
+    --ff-text: "Open Sans Condensed", sans-serif;
+    /*  HAWAIIAN COLOR PATTERN */
+    --baby: #45a6cc;
+    --babyMid: #4591cc;
+    --babyDark: #457bcc;
+    --lila: #5b2fb2;
+    --pink: #e541a5;
+    --pinkLight: #f349b2;
+    --sun: #ecc03a;
+    --bright: #f0e047;
+    /* darkest grey - used for headings */
+    --clr-grey-1: #102a42;
+    --clr-grey-2: hsl(211, 39%, 23%);
+    --clr-grey-3: hsl(209, 34%, 30%);
+    --clr-grey-4: hsl(209, 28%, 39%);
+    /* grey used for paragraphs */
+    --clr-grey-5: hsl(210, 22%, 49%);
+    --clr-grey-6: hsl(209, 23%, 60%);
+    --clr-grey-7: hsl(211, 27%, 70%);
+    --clr-grey-8: hsl(210, 31%, 80%);
+    --clr-grey-9: hsl(212, 33%, 89%);
+    --clr-grey-10: hsl(210, 36%, 96%);
+    --clr-white: #fff;
+    --transition: all 0.3s linear;
+    --spacing: 0.1rem;
+    --radius: 0.75rem;
+    --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+    --max-width: 1170px;
+    --fixed-width: 620px;
+}
+
+/*
+=============== 
+Global Styles
+===============
+*/
+
+*,
+::after,
+::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body {
-    background-color: ghostwhite;
+    font-family: var(--ff-text);
+    height: 100vh;
+    background: linear-gradient(
+        0deg,
+        rgba(69, 123, 204, 0.9),
+        rgba(69, 166, 204, 1)
+    );
+    color: var(--bright);
+    line-height: 1.5;
+    font-size: 0.875rem;
+}
+ul {
+    list-style-type: none;
+}
+a {
+    text-decoration: none;
+}
+h1,
+h2,
+h3,
+h4 {
+    letter-spacing: var(--spacing);
+    text-transform: capitalize;
+    line-height: 1.25;
+    margin-bottom: 0.75rem;
+    font-weight: 400;
+    color: var(--bright); /* added*/
+}
+h1 {
+    font-size: 3rem;
+    font-family: var(--ff-heading);
+}
+h2 {
+    font-size: 2rem;
+    font-family: var(--ff-heading);
+}
+h3 {
+    font-size: 1.25rem;
+    color: var(--sun);
+}
+h4 {
+    font-size: 0.875rem;
+}
+p {
+    margin-bottom: 1.25rem;
+    color: var(--clr-grey-10);
+}
+@media screen and (min-width: 800px) {
+    h1 {
+        font-size: 4rem;
+    }
+    h2 {
+        font-size: 2.5rem;
+    }
+    h3 {
+        font-size: 1.75rem;
+    }
+    h4 {
+        font-size: 1rem;
+    }
+    body {
+        font-size: 1rem;
+    }
+    h1,
+    h2,
+    h3,
+    h4 {
+        line-height: 1;
+    }
+}
+.nav-logo {
+    width: 100px; /* added*/
+}
+.img {
+    width: 100%;
+    display: block;
+}
+.text-slanted {
+    font-family: var(--ff-heading);
+}
+.section-center {
+    width: 90vw;
+    max-width: var(--max-width);
+    margin: 0 auto;
+}
+.section {
+    padding: 5rem 0;
+}
+.btn {
+    background: var(--pink);
+    color: var(--bright);
+    border-radius: var(--radius);
+    padding: 0.375rem 0.75rem;
+    text-transform: uppercase;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    transition: var(--transition);
+    border-color: transparent;
+    cursor: pointer;
+}
+.btn:hover {
+    background: var(--bright); /* added */
+    color: var(--pink);
+}
+
+/*
+=============== 
+Navbar
+===============
+*/
+
+.navbar {
+    height: 6rem;
+    background: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: var(--ff-heading); /* added */
+}
+
+.nav-center {
+    width: 90vw;
+    max-width: var(--max-width);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.nav-links {
+    display: none;
+}
+.toggle-nav {
+    /* background: var(--pink); */
+    background: transparent;
+    /* border-color: transparent; */
+    border: solid 2px var(--bright); /* added*/
+    color: var(--bright);
+    width: 3.5rem;
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    border-radius: var(--radius);
+    cursor: pointer;
+    transition: var(--transition);
+}
+.toggle-nav:hover {
+    background: var(--pink);
+}
+.pic-container {
+    position: relative;
+    margin-top: 0.75rem;
+}
+
+@media screen and (min-width: 800px) {
+    .nav-center {
+        position: relative;
+    }
+    .nav-logo {
+        position: absolute;
+        top: 50%;
+        left: 65%;
+        transform: translate(-50%, -50%);
+    }
+    .toggle-nav {
+        display: none;
+    }
+    .nav-links {
+        display: flex;
+        font-size: 1.5rem;
+        text-transform: capitalize;
+    }
+    .nav-link {
+        color: var(--clr-white);
+        margin-right: 3rem;
+        letter-spacing: var(--spacing);
+        transition: var(--transition);
+        /* font-size: 1.25rem; */
+        font-size: 1.5rem; /* added */
+        color: var(--bright); /* added */
+        cursor: pointer;
+    }
+    .nav-link:hover {
+        color: var(--pink);
+    }
+}
+@media screen and (min-width: 992px) {
+    .nav-logo {
+        left: 50%;
+    }
 }
 
 .logo {
-    width: 300px;
+    width: 100px;
+}
+.profile-pic {
+    width: 70px;
+    height: 70px;
+    object-fit: cover;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 .register-form {
