--- a/client/style.css
+++ b/client/style.css
@@ -217,6 +217,17 @@ Navbar
 .pic-container {
     margin-top: 0.75rem;
     justify-self: end;
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    column-gap: 1rem;
+}
+.logoutBtn {
+    position: absolute;
+    bottom: 2rem;
+    height: 1.7rem;
+    font-size: 0.7rem;
+    letter-spacing: 0;
 }
 
 @media screen and (min-width: 800px) {
@@ -286,6 +297,72 @@ Navbar
 .bigger {
     width: 250px;
     height: 250px;
+}
+
+/*
+=============== 
+Modal 
+===============
+*/
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    overflow: auto;
+    z-index: 10;
+    display: grid;
+    justify-items: center;
+    align-items: center;
+    transition: var(--transition);
+}
+
+.modal-container {
+    position: relative;
+    padding-top: 2rem;
+    width: 90vw;
+    max-width: 400px;
+    height: 200px;
+    background: linear-gradient(
+        0deg,
+        rgba(229, 65, 165, 0.95),
+        rgb(229, 65, 165, 0.9)
+    );
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    align-items: center;
+    transition: var(--transition);
+    border-radius: var(--radius);
+}
+
+.close-btn {
+    position: absolute;
+    font-size: 1.5rem;
+    right: 15px;
+    top: 10px;
+    z-index: 20;
+    cursor: pointer;
+    color: var(--bright);
+}
+.inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    z-index: -1;
+}
+#upload {
+    font-size: 2rem;
+    cursor: pointer;
+}
+
+.modalBtn {
+    background-color: var(--lila);
+    margin: 1rem;
 }
 
 /*
