--- a/client/style.css
+++ b/client/style.css
@@ -237,7 +237,7 @@ Navbar
     }
     .nav-links {
         display: grid;
-        grid-template-columns: auto auto;
+        grid-template-columns: auto auto auto;
         justify-content: end;
         align-content: center;
         font-size: 1.5rem;
