--- a/client/style.css
+++ b/client/style.css
@@ -166,6 +166,10 @@ p {
     border-color: transparent;
     cursor: pointer;
 }
+.bio-btn {
+    margin-right: 0.5rem;
+    margin-bottom: 0.5rem;
+}
 .btn:hover {
     background: var(--bright); /* added */
     color: var(--pink);
@@ -345,6 +349,16 @@ PROFILE
 .profile-center {
     /* min-height: calc(100vh - 10rem); */
     min-height: calc(50vh - 10rem);
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: start;
+    column-gap: 2rem;
+    width: 90vw;
+    max-width: var(--max-width);
+}
+.other-profile-center {
+    /* min-height: calc(100vh - 10rem); */
+    min-height: calc(100vh - 10rem);
     display: grid;
     grid-template-columns: auto 1fr;
     align-items: start;
