--- a/client/style.css
+++ b/client/style.css
@@ -234,11 +234,17 @@ Navbar
     font-size: 0.7rem;
     letter-spacing: 0;
 }
+@media screen and (max-width: 800px) {
+    .nav-logo {
+        display: none;
+    }
+}
 
 @media screen and (min-width: 800px) {
     .toggle-nav {
         display: none;
     }
+
     .nav-links {
         display: grid;
         grid-template-columns: repeat(4, auto);
@@ -269,6 +275,79 @@ Navbar
     border-radius: 50%;
     border: 3px solid var(--bright);
     cursor: pointer;
+}
+
+/*
+=============== 
+Sidebar
+===============
+*/
+.sidebar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    z-index: -1;
+    transition: var(--transition);
+    opacity: 0;
+    background-color: var(--pink);
+}
+.sidebar-overlay.show {
+    opacity: 1;
+    z-index: 100;
+}
+.sidebar {
+    width: 90vw;
+    height: 95vh;
+    max-width: var(--fixed-width);
+    background-color: var(--black);
+    border-radius: var(--radius);
+    box-shadow: var(--dark-shadow);
+    position: relative;
+    padding: 4rem;
+    transform: scale(0);
+}
+.show .sidebar {
+    transform: scale(1);
+}
+.sidebar-close {
+    font-size: 2rem;
+    background: transparent;
+    border-color: transparent;
+    color: var(--offWhite);
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    cursor: pointer;
+}
+.sidebar-link {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: capitalize;
+    font-family: var(--ff-heading);
+    color: var(--offWhite);
+    cursor: pointer;
+}
+
+.sidebar-link:hover {
+    color: var(--lila);
+}
+.sidebar-link:hover i {
+    color: var(--lila);
+}
+
+.sidebar-link i {
+    color: var(--offWhite);
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+}
+@media screen and (min-width: 800px) {
+    .sidebar-overlay {
+        display: none;
+    }
 }
 
 /*
