--- a/client/style.css
+++ b/client/style.css
@@ -20,10 +20,13 @@ Fonts (Pacifico, Open Sans)
     --babyMid: #4591cc;
     --babyDark: #457bcc;
     --lila: #5b2fb2;
-    --pink: #e541a5;
+    /* --pink: #e541a5; */
+    --pink: #e6007e;
     --pinkLight: #f349b2;
     --sun: #ecc03a;
-    --bright: #f0e047;
+    /* --bright: #f0e047; */
+    --bright: hsl(50, 72%, 64%);
+    --offBlue: hsl(187, 25%, 33%);
     /* darkest grey - used for headings */
     --clr-grey-1: #102a42;
     --clr-grey-2: hsl(211, 39%, 23%);
@@ -67,7 +70,8 @@ body {
         rgba(69, 123, 204, 0.9),
         rgba(69, 166, 204, 1)
     ); */
-    background: var(--babyDark);
+    /* background: var(--babyDark); */
+    background: var(--offBlue);
     /* url("../public/surfbuddies1.PNG"); */
     color: var(--bright);
     line-height: 1.5;
@@ -134,7 +138,7 @@ p {
 }
 
 .nav-logo {
-    width: 80px;
+    width: 70px;
 }
 
 .logo-container h2 {
@@ -440,6 +444,7 @@ MAINPAGE
     display: grid;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .main-center {
@@ -449,9 +454,7 @@ MAINPAGE
     width: 90vw;
     max-width: var(--max-width);
     position: relative;
-    /* grid-template-columns: auto 1fr;
-    align-items: start;
-    column-gap: 2rem; */
+    box-shadow: var(--dark-shadow);
 }
 
 .map-logo {
@@ -467,11 +470,16 @@ MAINPAGE
 .search {
     position: absolute;
     top: 1rem;
-    left: 50vw;
+    left: 55%;
     transform: translateX(-50%);
     width: 100%;
     max-width: 400px;
     z-index: 10;
+}
+@media screen and (max-width: 700px) {
+    .search {
+        left: 65%;
+    }
 }
 .search-results {
     color: var(--lila);
@@ -489,6 +497,10 @@ MAINPAGE
 }
 .locate img {
     width: 50px;
+}
+
+.info-window {
+    background-color: var(--offBlue);
 }
 
 /*
