--- a/client/style.css
+++ b/client/style.css
@@ -27,6 +27,7 @@ Fonts (Pacifico, Open Sans)
     /* --bright: #f0e047; */
     --bright: hsl(50, 72%, 64%);
     --offBlue: hsl(187, 25%, 33%);
+    --offBlueDark: #1f3234;
     /* darkest grey - used for headings */
     --clr-grey-1: #102a42;
     --clr-grey-2: hsl(211, 39%, 23%);
@@ -649,6 +650,111 @@ WEATHER
         padding-left: 0;
         padding-right: 0;
     }
+}
+
+/*
+=============== 
+POSTFEED WINDOW
+===============
+*/
+.post-container {
+    width: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    grid-template-columns: 1fr;
+}
+
+.post-center {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr;
+    background-color: var(--offBlueDark);
+    align-items: center;
+    justify-content: start;
+    border-radius: var(--radius);
+    width: 100%;
+    padding: 0 1rem;
+}
+.comment-container {
+    display: grid;
+    /* grid-template-rows: auto 1fr auto; */
+    align-items: center;
+    grid-template-columns: auto 1fr;
+    column-gap: 1rem;
+    width: 100%;
+    border-bottom: solid 1px var(--bright);
+}
+.post-thumb {
+    width: 60px;
+    height: 60px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid var(--bright);
+}
+
+.post-text {
+    width: 100%;
+    margin-top: 1rem;
+    display: block;
+    padding: 0.4rem 0.5rem;
+    background-color: rgba(255, 255, 255, 0.9);
+    font-size: 1rem;
+    font-family: var(--ff-text);
+    margin-bottom: 0.7rem;
+    outline: none;
+    border: solid 2px rgba(0, 0, 0, 0);
+    transition: var(--transition);
+    border-radius: var(--radius);
+}
+
+.post-text:focus {
+    background-color: rgba(255, 255, 255, 1);
+    border: 2px solid rgba(240, 224, 71, 1);
+}
+
+.btn-container {
+    display: grid;
+    align-items: center;
+    justify-items: start;
+    grid-template-columns: 1fr auto;
+    column-gap: 1rem;
+    width: 100%;
+}
+.post-image-upload {
+    display: grid;
+    justify-content: center;
+    justify-items: start;
+    align-items: center;
+    grid-template-columns: 0 auto 1fr;
+    column-gap: 1rem;
+    margin: 1rem 0;
+}
+.post-img-preview {
+    display: inline;
+    max-width: 200px;
+    margin-bottom: 0.7rem;
+    border-radius: var(--radius);
+    border: 2px solid var(--bright);
+}
+
+.post-btn {
+    background: var(--offBlue);
+    color: var(--bright);
+    border-radius: var(--radius);
+    padding: 0.375rem 0.75rem;
+    text-transform: uppercase;
+    letter-spacing: var(--spacing);
+    justify-self: end;
+    /* display: inline-block; */
+    transition: var(--transition);
+    border-color: transparent;
+    cursor: pointer;
+}
+.post-btn:hover {
+    background: var(--bright);
+    color: var(--offBlueDark);
 }
 
 /*
