--- a/client/style.css
+++ b/client/style.css
@@ -668,7 +668,7 @@ POSTFEED WINDOW
 
 .post-center {
     display: grid;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     grid-template-columns: 1fr;
     background-color: var(--offBlueDark);
     align-items: center;
@@ -719,6 +719,7 @@ POSTFEED WINDOW
     align-items: center;
     justify-items: start;
     grid-template-columns: 1fr auto;
+    grid-template-rows: auto 1fr;
     column-gap: 1rem;
     width: 100%;
 }
@@ -727,14 +728,29 @@ POSTFEED WINDOW
     justify-content: center;
     justify-items: start;
     align-items: center;
-    grid-template-columns: 0 auto 1fr;
+    grid-template-columns: 1fr;
     column-gap: 1rem;
     margin: 1rem 0;
 }
-.post-img-preview {
-    display: inline;
-    max-width: 200px;
+/* .post-img-preview {
+    display: block;
+    max-width: 600px;
+    object-fit: cover;
     margin-bottom: 0.7rem;
+    border-radius: var(--radius);
+    border: 2px solid var(--bright);
+} */
+
+.feed-pic-container {
+    padding: 2rem 0;
+    max-width: 600px;
+}
+
+.feed-pic {
+    width: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    object-fit: cover;
     border-radius: var(--radius);
     border: 2px solid var(--bright);
 }
@@ -755,6 +771,56 @@ POSTFEED WINDOW
 .post-btn:hover {
     background: var(--bright);
     color: var(--offBlueDark);
+}
+
+.feedpost-container {
+    width: 100%;
+    display: grid;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    grid-template-columns: 1fr;
+}
+
+.feedpost-center {
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr;
+    background-color: var(--offBlueDark);
+    align-items: center;
+    justify-content: start;
+    border-radius: var(--radius);
+    width: 100%;
+    padding: 0 1rem;
+}
+.feedcomment-container {
+    max-width: 700px;
+    display: grid;
+    padding-top: 2rem;
+    /* grid-template-rows: auto 1fr auto; */
+    align-items: center;
+    grid-template-columns: auto 1fr;
+    column-gap: 1rem;
+    width: 100%;
+    border-top: solid 1px var(--bright);
+}
+.feedcomment-container p {
+    margin: 0;
+    padding: 0;
+}
+
+.feed-pic-container {
+    padding: 2rem 0;
+    max-width: 600px;
+}
+
+.feed-pic {
+    width: 100%;
+    min-height: 300px;
+    max-height: 400px;
+    object-fit: cover;
+    border-radius: var(--radius);
+    border: 2px solid var(--bright);
 }
 
 /*
