--- a/client/style.css
+++ b/client/style.css
@@ -875,7 +875,7 @@ POSTFEED WINDOW
 .surfvan-follow {
     position: absolute;
     font-size: 1.5rem;
-    right: 22px;
+    right: 30px;
     bottom: 12px;
     z-index: 20;
     cursor: pointer;
@@ -886,7 +886,7 @@ POSTFEED WINDOW
 .surfvan-unfollow {
     position: absolute;
     font-size: 1.5rem;
-    right: 22px;
+    right: 30px;
     bottom: 12px;
     z-index: 20;
     cursor: pointer;
@@ -897,6 +897,21 @@ POSTFEED WINDOW
 .surfvan-unfollow:hover {
     fill: var(--pinkOpac);
     stroke-width: 15;
+}
+
+.follower-number {
+    position: absolute;
+    right: 12px;
+    bottom: 34px;
+    background: var(--bright);
+    width: 1.75rem;
+    height: 1.75rem;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
+    font-family: var(--ff-heading);
+    font-weight: bold;
+    font-size: 0.75rem;
 }
 
 /*
