--- a/client/style.css
+++ b/client/style.css
@@ -249,6 +249,11 @@ Navbar
         display: none;
     }
 }
+@media screen and (max-width: 900px) {
+    .logoutBtn {
+        display: none;
+    }
+}
 
 @media screen and (min-width: 800px) {
     .toggle-nav {
@@ -320,7 +325,7 @@ Sidebar
     z-index: -1;
     transition: var(--transition);
     opacity: 0;
-    background-color: var(--pink);
+    background-color: var(--offBlueDark);
 }
 .sidebar-overlay.show {
     opacity: 1;
@@ -360,10 +365,10 @@ Sidebar
 }
 
 .sidebar-link:hover {
-    color: var(--lila);
+    color: var(--pink);
 }
 .sidebar-link:hover i {
-    color: var(--lila);
+    color: var(--pink);
 }
 
 .sidebar-link i {
@@ -385,12 +390,13 @@ Welcome
 
 .register-container {
     display: grid;
+    min-height: 100vh;
     align-items: center;
     justify-content: center;
 }
 .register-center {
     display: grid;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     grid-template-rows: auto auto;
     align-items: center;
     justify-content: center;
@@ -401,10 +407,12 @@ Welcome
 .welcome-container {
     display: grid;
     justify-items: center;
+    align-items: start;
     grid-template-rows: repeat(3, auto);
+    /* grid-template-rows: auto 1fr 1fr; */
 }
 .logo {
-    max-width: 300px;
+    max-width: 200px;
 }
 
 .form-container {
@@ -440,6 +448,25 @@ Welcome
     margin-top: 0.5rem;
 }
 
+@media screen and (min-width: 700px) {
+    .register-center {
+        min-height: 500px;
+        height: 60vh;
+        max-width: 800px;
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+        /* column-gap: 1rem; */
+        box-shadow: var(--dark-shadow);
+        border-radius: var(--radius);
+    }
+
+    .form-container {
+        padding-top: 4rem;
+    }
+}
 /*
 =============== 
 MAINPAGE
@@ -1061,7 +1088,6 @@ BEACHFEED
     object-fit: cover;
     border-radius: 50%;
     border: 3px solid var(--bright);
-    cursor: pointer;
 }
 .beach-info {
     display: grid;
@@ -1103,6 +1129,8 @@ BEACHFEED
         font-size: 0.55rem;
         width: 90px;
     }
+}
+@media screen and (max-width: 900px) {
     .beachfeed-center {
         grid-template-columns: 1fr;
     }
@@ -1261,16 +1289,13 @@ Modal
     padding-top: 2rem;
     width: 90vw;
     max-width: 400px;
-    height: 200px;
-    background: linear-gradient(
-        0deg,
-        rgba(229, 65, 165, 0.95),
-        rgb(229, 65, 165, 0.9)
-    );
+    min-height: 200px;
+    background-color: var(--offBlue);
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: auto 1fr;
     grid-template-columns: 1fr;
     justify-items: center;
+    justify-content: center;
     align-items: center;
     transition: var(--transition);
     border-radius: var(--radius);
@@ -1285,6 +1310,11 @@ Modal
     cursor: pointer;
     color: var(--bright);
 }
+.uploader-pic-container {
+    display: grid;
+    justify-content: center;
+    justify-items: center;
+}
 .inputfile {
     width: 0.1px;
     height: 0.1px;
@@ -1298,8 +1328,15 @@ Modal
 }
 
 .modalBtn {
-    background-color: var(--lila);
+    background-color: var(--bright);
     margin: 1rem;
+}
+.modal-pic-preview {
+    width: 120px;
+    height: 120px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid var(--bright);
 }
 
 /*
