added stormglass api and beach for each post in beach feed

--- a/client/style.css
+++ b/client/style.css
@@ -882,6 +882,13 @@ POSTFEED WINDOW
 .created_timestamp {
     color: var(--offBlue);
 }
+.created_timestamp a {
+    color: var(--bright);
+    font-family: var(--ff-heading);
+}
+.created_timestamp a:hover {
+    color: var(--pink);
+}
 
 .feed-pic-container {
     padding: 2rem 0;
