--- a/client/style.css
+++ b/client/style.css
@@ -1150,6 +1150,9 @@ BEACHFEED
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
 }
+/* .beach-info h3:hover {
+    color: var(--pink);
+} */
 .unfollow-btn {
     width: 100px;
     font-size: 0.6rem;
